
syntax = "proto2";

message UntypedData {
  optional int64 phys_addr = 1;
  required int64 size = 2;
  required int64 cap = 3;
  optional UntypedData next = 4;
}

message SharedMemoryData {
  optional int64 cap = 1;
  required int64 addr = 2;
  required string name = 3;
  optional SharedMemoryData next = 4;
}

message EndpointData {
  required int64 cap = 1;
  required string name = 2;
  optional EndpointData next = 3;
}

message InitData {
  required string proc_name = 1;
  required int64 cnode_next_free = 2;
  required int64 cnode_size_bits = 3;

  repeated int64 existing_frames = 4;

  optional UntypedData untyped_list_head = 5;
  optional EndpointData ep_list_head = 6;
  optional EndpointData notification_list_head = 7;
  optional SharedMemoryData shmem_list_head = 8;
}
